--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,10 @@ body {
 }
 
 .bgfundo {
-  background: url(https://placehold.co/1920x1080) no-repeat center/cover;
-
+  background-image: url(../img/Fundopizzaria\ \(1\).png) ;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size:cover;
   /*background-color: blue;
        background-image: url(https://placehold.co/1920x1080);
        background-repeat: no-repeat;
