--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,8 @@ header {
 
   background: linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 0.8) 0%,
-    rgba(0, 0, 0, 0.8) 60%,
+    #ecbf55 0%,
+    #e8bd5b 60%,
     rgba(0, 0, 0, 0) 100%
   );
   background: -webkit-linear-gradient(
